Name:               jose-jwt
Version:            0.6.1
Synopsis:           JSON Object Signing and Encryption Library
Homepage:           http://github.com/tekul/jose-jwt
Bug-Reports:        http://github.com/tekul/jose-jwt/issues
Description:
    .
    Intended to provide support for the JOSE suite of IETF (draft)
    standards and the closely related JWT (JSON web token) spec
    (<http://tools.ietf.org/html/draft-ietf-oauth-json-web-token-32/>).
    .
    Both signed and encrypted JWTs are supported, as well as simple
    JWK format keys.
    .
    The library is currently intended to support work on an OpenID
    Connect implementation and the APIs should not be considered
    complete, stable or secure for all use cases.

Author:             Luke Taylor <tekul.hs@gmail.com>
Maintainer:         Luke Taylor <tekul.hs@gmail.com>
License:            BSD3
License-File:       LICENSE
Build-Type:         Simple
Cabal-Version:      >= 1.16
Category:           JSON, Cryptography

Extra-Source-Files:
    CHANGELOG.md

-- disable doctests with -f-doctest
Flag doctest
  default: True
  manual: True

Source-Repository head
  Type:             git
  Location:         git://github.com/tekul/jose-jwt.git

Library
  Default-Language:   Haskell2010
  Exposed-modules:    Jose.Jwt
                    , Jose.Jws
                    , Jose.Jwe
                    , Jose.Jwa
                    , Jose.Jwk
                    , Jose.Internal.Base64
                    , Jose.Internal.Crypto
  Other-Modules:      Jose.Types
  Build-Depends:      base >= 4 && < 5
                    , mtl >= 2.1.3.1
                    , bytestring >= 0.9
                    , byteable >= 0.1.1
                    , cereal >= 0.4
                    , containers >= 0.4
                    , cryptohash >= 0.8
                    , crypto-cipher-types >= 0.0.9
                    , crypto-pubkey >= 0.2.5
                    , crypto-pubkey-types >= 0.4
                    , crypto-random >= 0.0.7
                    , crypto-numbers >= 0.2
                    , cipher-aes >= 0.2.6
                    , errors >= 1.4 && < 2.0
                    , aeson >= 0.8.1.0
                    , old-locale
                    , text  >= 0.11
                    , time  >= 1.4
                    , unordered-containers >= 0.2
                    , base64-bytestring >= 1
                    , vector >= 0.10
  Ghc-Options:        -Wall

Test-suite tests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Other-Modules:      Tests.JwsSpec
                    , Tests.JweSpec
                    , Tests.JwkSpec
  Build-depends:      jose-jwt
                    , base
                    , aeson-qq
                    , bytestring
                    , base64-bytestring
                    , cryptohash
                    , crypto-pubkey
                    , crypto-pubkey-types
                    , crypto-random
                    , crypto-cipher-types
                    , cipher-aes
                    , either >= 4.0
                    , mtl
                    , text
                    , aeson
                    , hspec >= 1.6
                    , HUnit >= 1.2
                    , QuickCheck >= 2.4
  Ghc-options:        -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:     tests
  Main-is:            tests.hs

Test-suite doctests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Main-is:            doctests.hs
  Ghc-options:        -XOverloadedStrings

  if !flag(doctest)
    Buildable: False
  else
    Build-depends:    base
                    , doctest >= 0.9.11
                    , cprng-aes

Benchmark bench-jwt
  Default-Language:   Haskell2010
  Hs-source-dirs:     benchmarks
  Main-is:            bench.hs
  Other-Modules:      Keys
  Type:               exitcode-stdio-1.0
  Build-depends:      jose-jwt
                    , base
                    , bytestring
                    , criterion
                    , crypto-pubkey
                    , crypto-random

  Ghc-Options:        -Wall -O2

