Name:               jose-jwt
Version:            0.7.4
Synopsis:           JSON Object Signing and Encryption Library
Homepage:           http://github.com/tekul/jose-jwt
Bug-Reports:        http://github.com/tekul/jose-jwt/issues
Description:
    .
    An implementation of the JOSE suite of IETF standards
    and the closely related JWT (JSON web token) spec
    (<https://tools.ietf.org/html/rfc7519/>).
    .
    Both signed and encrypted JWTs are supported, as well as simple
    JWK keys.

Author:             Luke Taylor <tekul.hs@gmail.com>
Maintainer:         Luke Taylor <tekul.hs@gmail.com>
License:            BSD3
License-File:       LICENSE
Build-Type:         Simple
Cabal-Version:      >= 1.16
Category:           JSON, Cryptography

Extra-Source-Files:
    CHANGELOG.md
    tests/*.json

-- disable doctests with -f-doctest
Flag doctest
  default: True
  manual: True

Source-Repository head
  Type:             git
  Location:         https://github.com/tekul/jose-jwt.git

Library
  Default-Language:   Haskell2010
  Exposed-modules:    Jose.Jwt
                    , Jose.Jws
                    , Jose.Jwe
                    , Jose.Jwa
                    , Jose.Jwk
                    , Jose.Internal.Base64
                    , Jose.Internal.Crypto
  Other-Modules:      Jose.Types
  Build-Depends:      base >= 4.6 && < 5
                    , aeson >= 0.8.0.2
                    , bytestring >= 0.9
                    , cereal >= 0.4
                    , containers >= 0.4
                    , cryptonite >= 0.19
                    , either
                    , memory >= 0.10
                    , mtl >= 2.1.3.1
                    , text  >= 0.11
                    , time  >= 1.4
                    , unordered-containers >= 0.2
                    , vector >= 0.10
  Ghc-Options:        -Wall

Test-suite tests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Other-Modules:      Tests.JwsSpec
                    , Tests.JweSpec
                    , Tests.JwkSpec
  Build-depends:      jose-jwt
                    , base
                    , aeson
                    , bytestring
                    , cryptonite
                    , either >= 4.0
                    , memory
                    , mtl
                    , text
                    , unordered-containers
                    , vector
                    , hspec >= 1.6
                    , HUnit >= 1.2
                    , QuickCheck >= 2.4
  Ghc-options:        -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:     tests
  Main-is:            tests.hs

Test-suite doctests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Main-is:            doctests.hs
  Default-Extensions: OverloadedStrings

  if !flag(doctest)
    Buildable: False
  else
    Build-depends:    base
                    , doctest >= 0.9.11
                    , cryptonite

Benchmark bench-jwt
  Default-Language:   Haskell2010
  Hs-source-dirs:     benchmarks
  Main-is:            bench.hs
  Other-Modules:      Keys
  Type:               exitcode-stdio-1.0
  Build-depends:      jose-jwt
                    , base
                    , bytestring
                    , criterion
                    , cryptonite

  Ghc-Options:        -Wall -fno-warn-missing-signatures
