Name:               jwt
Version:            0.1
Synopsis:           JWT library
Description:
  Support for processing JSON Web Tokens as defined in
  http://tools.ietf.org/html/draft-ietf-oauth-json-web-token-13
Author:             Luke Taylor
License:            BSD3
Build-Type:         Simple
Cabal-Version:      >= 1.16

Library
  Default-Language:   Haskell2010
  Exposed-modules:    Data.Jwt
                    , Data.Jwt.Crypto
  Other-Modules:      Data.Jwt.Internal
                    , Data.Jwt.Types
  Build-Depends:      base >= 4
                    , mtl >= 2.1
--                  , ghc-prim >= 0.2
                    , bytestring >= 0.9
                    ,  cereal >= 0.4
                    , containers >= 0.4
                    , cryptohash >= 0.8
                    , crypto-cipher-types >= 0.0.9
                    , crypto-pubkey >= 0.1.2
                    , crypto-random
                    , cipher-aes >= 0.2.6
                    , aeson >= 0.6
                    , text  >= 0.11
                    , base64-bytestring >= 1
  Ghc-Options:        -Wall -O2

Test-suite tests
  Default-Language:   Haskell2010
  Type:               exitcode-stdio-1.0
  Other-Modules:      Tests.JwsSpec
                    , Tests.JweSpec
  Build-depends:      jwt
                    , base >= 4
                    , bytestring
                    , base64-bytestring
                    , cryptohash
                    , crypto-pubkey
                    , crypto-random
                    , crypto-cipher-types
                    , cipher-aes
                    , cprng-aes
                    , either >= 4.0
                    , mtl
                    , text
                    , aeson
                    , hspec >= 1.6
                    , HUnit >= 1.2 && < 2
                    , QuickCheck >= 2.4
  Ghc-options:        -Wall -rtsopts -fno-warn-missing-signatures
  Hs-source-dirs:     tests
  Main-is:            tests.hs

Benchmark bench-jwt
  Default-Language:   Haskell2010
  Hs-source-dirs:     benchmarks
  Main-is:            bench.hs
  Type:               exitcode-stdio-1.0
  Build-depends:      jwt
                    , base
                    , bytestring
                    , criterion
                    , crypto-pubkey
                    , crypto-random

  Ghc-Options:        -Wall -O2

